--- a/tox.ini
+++ b/tox.ini
@@ -118,6 +118,7 @@ commands=
   ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/shrink-mon.yml --extra-vars "\
       ireallymeanit=yes \
       mon_to_kill={env:MON_TO_KILL:mon2} \
+      shrink_mon_update_cfg=true \
   "
 [shrink-osd]
 commands=
