--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -700,7 +700,7 @@ dummy:
 #grafana_uid: 472
 #grafana_datasource: Dashboard
 #grafana_dashboards_path: "/etc/grafana/dashboards/ceph-dashboard"
-#grafana_dashboard_version: master
+#grafana_dashboard_version: quincy
 #grafana_dashboard_files:
 #  - ceph-cluster.json
 #  - cephfs-overview.json
