--- a/group_vars/rhcs.yml.sample
+++ b/group_vars/rhcs.yml.sample
@@ -700,7 +700,7 @@ grafana_container_image: registry.redhat.io/rhceph/rhceph-5-dashboard-rhel8:5
 #grafana_uid: 472
 #grafana_datasource: Dashboard
 #grafana_dashboards_path: "/etc/grafana/dashboards/ceph-dashboard"
-#grafana_dashboard_version: master
+#grafana_dashboard_version: quincy
 #grafana_dashboard_files:
 #  - ceph-cluster.json
 #  - cephfs-overview.json
