--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -692,7 +692,7 @@ grafana_container_memory: 4
 grafana_uid: 472
 grafana_datasource: Dashboard
 grafana_dashboards_path: "/etc/grafana/dashboards/ceph-dashboard"
-grafana_dashboard_version: master
+grafana_dashboard_version: quincy
 grafana_dashboard_files:
   - ceph-cluster.json
   - cephfs-overview.json
