--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -186,7 +186,7 @@ ceph_obs_repo: "https://download.opensuse.org/repositories/filesystems:/ceph:/{{
 #
 # Enabled when ceph_repository == 'dev'
 #
-ceph_dev_branch: master # development branch you would like to use e.g: master, wip-hack
+ceph_dev_branch: main # development branch you would like to use e.g: main, wip-hack
 ceph_dev_sha1: latest # distinct sha1 to use, defaults to 'latest' (as in latest built)
 
 nfs_ganesha_dev: false # use development repos for nfs-ganesha
