CentOS Ceph SIG binary package & use 'sig' to refer this repo
Modified to use CentOS Ceph Storage SIG binary package
Define SIGS as valid ceph repository

Signed-off-by: Mario Codeniera <mcodenie@massey.ac.nz>

--- a/roles/ceph-common/tasks/installs/configure_redhat_repository_installation.yml
+++ b/roles/ceph-common/tasks/installs/configure_redhat_repository_installation.yml
@@ -7,6 +7,10 @@
   include_tasks: redhat_rhcs_repository.yml
   when: ceph_repository == 'rhcs'
 
+- name: include centos_sig_repository.yml
+  include_tasks: centos_sig_repository.yml
+  when: ceph_repository == 'sig'
+
 - name: include redhat_dev_repository.yml
   include_tasks: redhat_dev_repository.yml
   when: ceph_repository == 'dev'
