--- a/roles/ceph-validate/tasks/check_repository.yml
+++ b/roles/ceph-validate/tasks/check_repository.yml
@@ -5,10 +5,10 @@
 
 - name: validate ceph_repository
   fail:
-    msg: "ceph_repository must be either 'community', 'rhcs', 'obs', 'dev', 'custom' or 'uca'"
+    msg: "ceph_repository must be either 'community', 'rhcs', 'obs', 'dev', 'custom', 'uca' or 'sig'"
   when:
     - ceph_origin == 'repository'
-    - ceph_repository not in ['community', 'rhcs', 'obs', 'dev', 'custom', 'uca']
+    - ceph_repository not in ['community', 'rhcs', 'obs', 'dev', 'custom', 'uca', 'sig']
 
 - name: validate ceph_repository_community
   fail:
