--- a/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml
+++ b/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml
@@ -569,6 +569,7 @@
         name: "{{ item.split('=')[1] }}"
         state: stopped
         enabled: no
+      ignore_errors: true
       loop: "{{ rbdmirror_services.stdout_lines }}"
 
     - name: remove old systemd unit files
