--- a/roles/ceph-dashboard/tasks/configure_dashboard.yml
+++ b/roles/ceph-dashboard/tasks/configure_dashboard.yml
@@ -36,7 +36,7 @@
   loop: "{{ groups.get(rgw_group_name, []) }}"
   loop_control:
     loop_var: ceph_dashboard_call_item
-  when: groups.get(rgw_group_name, []) | length > 0
+  when: inventory_hostname in groups.get(rgw_group_name, [])
 
 - name: disable SSL for dashboard
   when: dashboard_protocol == "http"
