--- a/tox-subset_update.ini
+++ b/tox-subset_update.ini
@@ -49,8 +49,8 @@ commands=
   # deploy the cluster
   bash -c 'ANSIBLE_CONFIG={envdir}/tmp/ceph-ansible/ansible.cfg ansible-playbook -vv -i {changedir}/{env:INVENTORY} {envdir}/tmp/ceph-ansible/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
-      ceph_docker_registry=quay.ceph.io \
-      ceph_docker_image=ceph-ci/daemon \
+      ceph_docker_registry=quay.io \
+      ceph_docker_image=ceph/daemon \
       ceph_docker_image_tag=latest-nautilus \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
